--- a/css/style.css
+++ b/css/style.css
@@ -733,6 +733,7 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
+
   background-color: rgba(0, 0, 0, 0.2);
 
   opacity: 1;
@@ -750,9 +751,12 @@ img {
 }
 
 .modal {
+  display: block;
   position: absolute;
   left: 50%;
   top: 50%;
+
+  padding: 40px 40px;
 
   min-width: 528px;
   min-height: 581px;
@@ -764,4 +768,15 @@ img {
 
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-close {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+.js-speaker-form {
+  display: inline-flex;
+  flex-direction: column;
 }
